--- a/www/index.html
+++ b/www/index.html
@@ -40,19 +40,21 @@
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Hello World</title>
+
+
 </head>
 
 <body>
     <div class="app">
-        <h1>Hello World666</h1>
+        <h1>Hello World777</h1>
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
         </div><br>
-        <button id="testdialog">Dialog</button><br><br>
-        <button id="forcecrash">ForceCrash</button><br><br>
-        <button id="feedback">Feedback</button><br><br>
-        <button id="checkforupdates">Checking For Updates</button><br><br>
+        <button id="testdialog" class="mybtn">Dialog</button><br><br>
+        <button id="forcecrash" class="mybtn">ForceCrash</button><br><br>
+        <button id="feedback" class="mybtn">Feedback</button><br><br>
+        <button id="checkforupdates" class="mybtn">Checking For Updates</button><br><br>
 
 
     </div>
